@@ -2,8 +2,8 @@ package com.lankydan;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 import java.util.UUID;
 
 import com.lankydan.cassandra.actor.ActorByMovieRepository;
@@ -24,17 +24,23 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 @SpringBootApplication
 public class Application implements CommandLineRunner {
 
-  @Autowired private ActorRepository actorRepository;
+  @Autowired
+  private ActorRepository actorRepository;
 
-  @Autowired private MovieRepository movieRepository;
+  @Autowired
+  private MovieRepository movieRepository;
 
-  @Autowired private MovieByActorRepository movieByActorRepository;
+  @Autowired
+  private MovieByActorRepository movieByActorRepository;
 
-  @Autowired private MovieByGenreRepository movieByGenreRepository;
+  @Autowired
+  private MovieByGenreRepository movieByGenreRepository;
 
-  @Autowired private MovieByYearRepository movieByYearRepository;
+  @Autowired
+  private MovieByYearRepository movieByYearRepository;
 
-  @Autowired private ActorByMovieRepository actorByMovieRepository;
+  @Autowired
+  private ActorByMovieRepository actorByMovieRepository;
 
   public static void main(final String args[]) {
     SpringApplication.run(Application.class);
@@ -42,25 +48,18 @@ public class Application implements CommandLineRunner {
 
   @Override
   public void run(final String... args) throws Exception {
-    final Actor tomHanks =
-        new Actor(UUID.randomUUID(), "Tom Hanks", LocalDateTime.of(1956, 7, 9, 0, 0));
-    final Actor vinDiesel =
-        new Actor(UUID.randomUUID(), "Vin Diesel", LocalDateTime.of(1967, 7, 18, 0, 0));
-    final Actor mattDamon =
-        new Actor(UUID.randomUUID(), "Matt Damon", LocalDateTime.of(1970, 10, 8, 0, 0));
+    final Actor tomHanks = new Actor(UUID.randomUUID(), "Tom Hanks", LocalDateTime.of(1956, 7, 9, 0, 0));
+    final Actor vinDiesel = new Actor(UUID.randomUUID(), "Vin Diesel", LocalDateTime.of(1967, 7, 18, 0, 0));
+    final Actor mattDamon = new Actor(UUID.randomUUID(), "Matt Damon", LocalDateTime.of(1970, 10, 8, 0, 0));
 
     actorRepository.insert(Arrays.asList(tomHanks, vinDiesel, mattDamon));
 
     final Role captainMiller = new Role("Tom Hanks", "Captain Miller");
     final Role privateCaparzo = new Role("Vin Diesel", "Private Caparzo");
     final Role privateRyan = new Role("Matt Damon", "Private Ryan");
-    final Movie savingPrivateRyan =
-        new Movie(
-            "Saving Private Ryan",
-            LocalDateTime.of(1998, 7, 21, 0, 0),
-            Set.of("Action", "War", "Drama"),
-            "18",
-            List.of(captainMiller, privateCaparzo, privateRyan));
+    final Movie savingPrivateRyan = new Movie("Saving Private Ryan", LocalDateTime.of(1998, 7, 21, 0, 0),
+        new HashSet<>(Arrays.asList("Action", "War", "Drama")), "18",
+        Arrays.asList(captainMiller, privateCaparzo, privateRyan));
 
     movieRepository.insert(savingPrivateRyan);
 
